phone spacing fixes

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -117,6 +117,14 @@ h5{
     .about_me{
         width: 50%;
         margin: 2rem auto 4rem;
+        width: 100%;
+        height: 100%;
+    }
+    .about_details{
+        grid-template-columns: 1fr 1fr;
+        gap:1rem;
+        width: 100%;
+        height: 100%;
     }
     .about_content p{
         margin: 1rem 0 1.5rem;
@@ -127,11 +135,21 @@ h5{
     .about_me{
         width: 65%;
         margin: 0 auto 3rem;
+        
     }
     .about_cards{
-        grid-template-columns: .8fr 1fr;
+        grid-template-columns: 1fr 1fr;
         gap:1rem;
+        width: 100%;
+        height: 100%;
     }
+    .about_details{
+        grid-template-columns: 1fr 1fr;
+        gap:1rem;
+        width: 100%;
+        height: 100%;
+    }
+    
     .about_content{
         text-align: center;
     }
